prevented line break in tree

--- a/com.supeyou.core.web/src/main/java/com/supeyou/core/web/public/core.css
+++ b/com.supeyou.core.web/src/main/java/com/supeyou/core/web/public/core.css
@@ -1,5 +1,6 @@
 
 .invitationclicks-root{
+	white-space: nowrap;
 	padding: 0 6px;
 	display: inline-block;
 	vertical-align: top;
